# DracAI-Multimodal-RAG-System

./: .dockerignore  README.md  docker-compose.yml  main.py  pyproject.toml  render.yml  requirements.txt
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/api/: routes.py
backend/app/graph/: prompt.py  state.py
backend/app/services/: document_processor.py  embedding_service.py  query_service.py  vector_store.py
backend/app/utils/: token_counter.py
chroma_db/: chroma.sqlite3
frontend/: Dockerfile  app.py  requirements.txt
